# PTMT-Agent

./: .env_example  .gitignore  README.md  curriculum_BERT_EX.json  curriculum_BERT_IM.json  curriculum_BERT_NV.json  debug_1차_서브그래프.json  dummy_EX_test.json  dummy_IM_test.json  dummy_IM_test_bf.json  dummy_NV_test1.json  dummy_NV_test2.json  dummy_NV_test_1.json  dummy_NV_test_2.json  dummy_NV_test_LORA.json  dummy_NV_test_ko.json  dummy_NV_test_ko_fin.json  dummy_NV_test_ko_sel.json  dummy_NV_test_retry.json  dummy_initial_EX.json  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: basic_template.md
.github/workflows/: create-jira-issue.yml
app/: main.py
app/api/: deps.py  main.py
app/core/: exceptions.py
app/models/: __init__.py  base.py  curriculum.py  graph.py  keyword.py
app/services/: create_curriculum_service.py  extract_paper_concept_service.py
core/agents/: __init__.py  concept_expansion_agent.py  concept_extraction_agent.py  curriculum_compose_agent.py  curriculum_orchestrator.py  first_node_order_agent.py  keyword_graph_agent.py  paper_concept_alginment_agent.py  paper_concept_alignment_agent.py  resource_discovery_agent.py  study_load_estimation_agent.py
core/contracts/: __init__.py  concept_expansion.py  concept_extraction.py  curriculum.py  curriculum_compose.py  curriculum_orchestrator.py  first_node_order_agent.py  keywordgraph.py  paper.py  paper_alignment.py  (+4 more)
scripts/: run_server.sh
tests/: conftest.py  test_curriculum.py  test_exceptions.py  test_key_slot_selection.py  test_keywords.py  test_main.py
(+91 files in other folders)
