[project]
name = "ptmt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "langchain>=1.2.7",
    "openai>=2.15.0",
    "tavily-python>=0.7.19",
    "langchain-upstage>=0.7.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]